--- a/README.textile
+++ b/README.textile
@@ -13,8 +13,10 @@ Jones 7
 Thu Nov 13 2014 
 A compound is something made of two or more different elements, while the elements that form it have different chemical and physical properties. Take the MgSO4 and Na2CO3 reaction we did in science class. The reactants are soluble but MgCO3 is a solid. One physical property of Magnesium is that it is a metal, it is shiny, but MgCO3 and MgSO4 are inorganic salts. They are white and chalky, not silver and metallic. This shows that elements are different than the molecules and compounds they make up. A compound isn’t always the same chemically and physically than the elements making it up.
 
-Its faster, better and way simpler than anything else out there.
+Its faster, better and way simpler than anything else out there. Its open and free to change and publish by anyone.
 
-h1. Cost: $0.00
+h2. oh yeah and the cost:
 
-no :shit:.
+h1. $0.00
+
+no :shit:. no freaking :shit:.
