--- a/_posts/2015-12-02-pheonix.md
+++ b/_posts/2015-12-02-pheonix.md
@@ -25,7 +25,7 @@ I wrote so many versions of EssayMaker in this year. Like, way too many.
 1. EssayMaker Batch
     - Entirely written in Batch.
     - Very bad.
-    - Still available over at my repository `[oldcode](http://github.com/soops/oldcode)`.
+    - Still available over at my repository [`oldcode`](http://github.com/soops/oldcode).
 2. EssayMaker Console
     - Entirely written in C#, but with an absense of GUI.
     - Decent, but still pretty much bad.
